@@ -1,3 +1,11 @@
+Version 22     ??
+
+--Fixed bug in lingering commit button when dragging a slider and releasing it
+  in a way that presses the commit button (thanks Benjamin Y).
+
+
+
+
 Version 21     2015-April-2
 
 --Added display of active player count in client.
